# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: .envrc.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  shell.nix
{{ cookiecutter.project_name }}/dockerfiles/: uv.Dockerfile
